# site

./: #start.sh#  .gitignore  2024.html  :w  Caddyfile  Containerfile  Dockerfile  LICENSE  README  README.md  become-an-engineer.html  cpanfile  create_admin_form.html  dancer2-controllers.html  docker-compose.yml  docker-mod-perl.html  dune  dune-project  e  emacs.html  esy.json  go.mod  go.sum  in-defense-of-global-variables.html  index.css  index.html  insert-posts.sh  insert.pl  jpa-hibernate-stupid-performance.html  log  main.go  main.sh  maybe-escaping-evil.html  niche-software.html  normalize_html.pl  perl-oo-action-benchmark.html  post2.post  rawleydotxyz  rawleydotxyz.ml  site.pl  (+2 more)
bookshelf/: bookshelf.mustache  bookshelf.raku
bootstrap/: routes.go
controllers/: admin.go  admin_test.go  blog.go  music.go
db/: database.ml  database.mli  dune  inserts.ml
html/: index.html  philosophy.html  resume.html  web-ring.html
models/: administrator.go  blog_post.go  comment.go  music.go  page.go
posts/: 2024.html  become-an-engineer.html  books-of-2022.blog  dancer2-controllers.html  docker-mod-perl.html  emacs.html  in-defense-of-global-variables.html  jpa-hibernate-stupid-performance.html  maybe-escaping-evil.html  niche-software.html  perl-in-2025.html  perl-oo-action-benchmark.html  test-post-two.post  test-post.post  trying-lite-xl.html
public/: index.html
render/: blog_index.eml.ml  dune  layout.eml.ml  post_layout.eml.ml  render.ml  render.mli
repos/: admin_repo.go  (+6 more)
views/: blog_index.eml.ml  dune  index.eml.ml  layout.eml.ml  post_layout.eml.ml
(+39 files in other folders)
