(executable
	(name rawleydotxyz)
	(libraries dream caqti render database caqti-lwt caqti-driver-sqlite3 lwt))

(env
	(dev
		(flags (:standard -w -32))))

(rule
	(targets template.ml)
	(deps template.eml.ml)
	(action (run dream_eml %{deps} --workspace %{workspace_root})))

(data_only_dirs _esy esy.lock lib node_modules)