(library
	(name views)
	(public_name rawleydotxyz.views)
	(libraries dream lwt database)
	(preprocess 
		(pps lwt_ppx)))

(rule
 (targets index.ml layout.ml post_layout.ml blog_index.ml)
 (deps index.eml.ml layout.eml.ml post_layout.eml.ml blog_index.eml.ml)
 (action
  (run dream_eml %{deps} --workspace %{workspace_root})))